--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,13 @@
 {
-    "name": "laravel/laravel",
+    "name": "ysmtegsr/serverless-laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": ["serverless framework", "laravel"],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "bref/bref": "^1.2",
+        "bref/laravel-bridge": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
