--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["serverless framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3",
         "bref/bref": "^1.2",
         "bref/laravel-bridge": "^1.0",
         "fideloper/proxy": "^4.4",
