docs: how to build serverless lamp stack like this repo

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ npm-debug.log
 yarn-error.log
 
 # Serverless Framework
-serverless-config/env
+serverless-config/env/*.yml
 .serverless
 
 # Static assets
